[package]
name = "m3u_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
url = "2"
celes = "2.4.0"
serde_json = "1.0.95"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

