[package]
name = "m3u_parser"
version = "0.1.1"
edition = "2021"
description = "A library for parsing and manipulating M3U files"
authors = ["Pawan <pawanpaudel93@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
url = "2"
celes = "2.4.0"
serde = "1.0.160"
serde_json = "1.0.96"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8.5"
once_cell = "1.17.1"
